add validation annotations